<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_splash" />

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="20dp"
        android:textColor="#2E2E5D"
        android:textStyle="bold"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_selector"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColorHint="#B8B8C7" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/edittext_selector"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColorHint="#B8B8C7" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="18dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/bt_login"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="#F77A55"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or login with"
        android:textColor="#2E2E5D"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/login_with_google"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bt_login_social"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="15dp"
            android:contentDescription="@string/login_with_google"
            android:paddingBottom="15dp"
            android:src="@drawable/logos_google"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/login_with_facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bt_login_social"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:contentDescription="@string/login_with_facebook"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/logos_facebook"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/login_with_twitter"
            android:layout_width="0dp"
            android:contentDescription="@string/login_with_twitter"
            android:layout_weight="1"
            android:background="@drawable/bt_login_social"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/logos_twitter"
            android:layout_height="wrap_content" />
    </LinearLayout>
   <LinearLayout
       android:layout_width="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="12dp"
       android:layout_marginStart="24dp"
       android:layout_gravity="center"
       android:layout_marginEnd="24dp"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/don_t_have_and_account"
           android:textSize="16sp"
           android:layout_marginEnd="2dp"
           android:textColor="#2E2E5D"
           />
       <TextView
           android:id="@+id/redirect_to_register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="#F77A55"
           android:text="@string/register"
           android:textSize="16sp"
           />
   </LinearLayout>
</LinearLayout>