<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20sp"
        android:text="@string/register"
        android:textColor="#2E2E5D"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_view" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edittext_rounded_background"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:paddingHorizontal="4dp"
        android:paddingVertical="12dp"
        android:textColorHint="#B8B8C7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title" />
    <EditText
        android:id="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edittext_rounded_background"
        android:layout_width="match_parent"
        android:paddingHorizontal="4dp"
        android:paddingVertical="12dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#B8B8C7"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        android:inputType="datetime"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="4dp"
        android:clickable="true"
        android:paddingVertical="12dp"
        android:hint="Date Of Birth"
        android:focusable="false"
        android:textColorHint="#B8B8C7"
        android:background="@drawable/edittext_rounded_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/signup_terms"
        android:textSize="14sp"
        android:textColor="#606060"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/tv_terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="15dp"
        android:background="@drawable/bt_login"
        android:text="@string/register"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:background="@drawable/bt_cancel"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="4dp"
        android:textColor="#4838D1"
        android:paddingVertical="15dp"
        android:text="Cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>